Fix unclickable links on Firefox

--- a/src/components/sections/ContactSection/contactSection.scss
+++ b/src/components/sections/ContactSection/contactSection.scss
@@ -25,7 +25,6 @@
       text-align: center;
     }
     a {
-      display: inline-block;
       height: 30px;
       margin: $gutter/2;
       margin-bottom: 0;
